--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="day-buttons">
-            <button class="btn btn-circle day-btn">1</button>
+            <button class="btn btn-circle day-btn current-day">1</button>
             <!-- <button class="btn btn-circle day-btn current-day">2</button>
             <button class="btn btn-circle day-btn">3</button>
  -->            <button class="btn btn-circle day-btn" id="day-add">+</button>
@@ -63,6 +63,7 @@
           <div>
             <h4>My Hotel</h4>
             <ul class="list-group">
+
             </ul>
           </div>
           <div>
