--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,21 @@
 body {
   padding-top: 50px;
-  background: #c1b5ad;
+  background: #b695fd;
   font-family: 'Varela Round', sans-serif;
   min-width: -webkit-min-content; }
 
 #app {
-  border-left: 2px solid #b1a398;
-  border-right: 2px solid #b1a398; }
+  border-left: 2px solid #824afb;
+  border-right: 2px solid #824afb; }
 
 .navbar-inverse {
-  background: #736357;
-  border-color: #564a41; }
+  background: #4004C2;
+  border-color: #300390; }
   .navbar-inverse .navbar-toggle .icon-bar {
-    background-color: #a8c9dd; }
+    background-color: #F0C5E8; }
 
 .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
-  color: #a8c9dd; }
+  color: #F0C5E8; }
 
 .navbar-inverse .navbar-brand {
   padding: 12px 15px;
@@ -28,19 +28,19 @@ body {
     vertical-align: middle; }
 
 .navbar-inverse .navbar-nav > .active > a {
-  box-shadow: inset 0 0 10px #473e36;
-  background: #64574c;
-  color: #cde0eb; }
+  box-shadow: inset 0 0 10px #270277;
+  background: #3803a9;
+  color: #faeef8; }
   .navbar-inverse .navbar-nav > .active > a:hover {
-    background: #564a41;
-    box-shadow: inset 0 0 10px #39312b;
+    background: #300390;
+    box-shadow: inset 0 0 10px #1f025e;
     color: #fff; }
 
 #map-canvas {
   height: calc(100vh - 50px);
-  border-right: 2px solid #b1a398;
-  border-bottom: 2px solid #b1a398;
-  border-left: 2px solid #b1a398;
+  border-right: 2px solid #824afb;
+  border-bottom: 2px solid #824afb;
+  border-left: 2px solid #824afb;
   width: 100%; }
 
 @media (min-width: 768px) {
@@ -65,18 +65,18 @@ select {
   -webkit-appearance: menulist-button; }
 
 .btn-primary {
-  background: #5f9bc0;
-  border-color: #5797bd; }
+  background: #db74c8;
+  border-color: #d96cc5; }
   .btn-primary:hover {
-    background: #4283aa;
-    border-color: #3f7da2; }
+    background: #d14bb8;
+    border-color: #ce43b5; }
 
 h4 {
   color: #aaa;
   margin-top: 0; }
 
 h3 {
-  color: #64574c;
+  color: #3803a9;
   text-align: center;
   margin-top: 0; }
 
@@ -95,24 +95,24 @@ h3 {
   height: 30px;
   padding: 5px 5px;
   background: transparent;
-  border-color: #a8c9dd;
-  color: #a8c9dd; }
+  border-color: #F0C5E8;
+  color: #F0C5E8; }
   .day-btn:hover {
     border-color: #fff;
     color: #fff; }
   .day-btn.current-day {
-    background: #a8c9dd;
-    color: #736357; }
+    background: #F0C5E8;
+    color: #4004C2; }
     .day-btn.current-day:hover {
       background: #fff; }
 
 .panel-default {
-  background: #efecea;
+  background: #e3d6fe;
   border-radius: 8px;
   border-width: 0;
   margin-bottom: 0; }
   .panel-default .panel-heading {
-    background: #736357;
+    background: #4004C2;
     border-radius: 8px 8px 0 0; }
   .panel-default .panel-body {
     padding: 5px 15px; }
@@ -133,7 +133,7 @@ h3 {
 #day-title {
   display: inline-block;
   padding: 5px;
-  border: 1px solid #736357;
+  border: 1px solid #4004C2;
   border-radius: 5px; }
   #day-title > * {
     display: inline-block;
